# gimbal_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  package.xml
include/: gimbal_serializer.h  serial_exception.h
msg/: status.msg
scripts/: gimbal_test.py
src/: gimbal_serializer.cpp  gimbal_serializer_node.cpp
